correct special charcter rendering

--- a/index.html
+++ b/index.html
@@ -17,39 +17,43 @@
         <span>~/tkml/projects/</span>
       </div>
       <h2>Getting a Setup</h2>
-      <p>git init</p>
-      <p>git clone https://github.com/bartaz/impress.js.git</p>
-      <p>Point 9</p>
+      <ul>
+        <li> > git init</li>
+        <li> > git clone git@github.com:Tukaiz/backstage_build_3.git</li>
+      </ul>
     </div>
     <div class="step slide" data-x="-1530" data-y="800" data-z="-400">
       <div class="toolbar">
         <span>~/tkml/projects/</span>
       </div>
-      <h2>Getting a Setup</h2>
-      <p>git add <filename or path></p>
-      <p>git add *</p>
-      <p>git commit -m "Commit message"</p>
-      <p>git push origin master</p>
+      <h2>Working with Files</h2>
+      <ul>
+        <li> > git add &lt;filename or path&gt;</li>
+        <li> > git add *</li>
+        <li> > git add -A</li>
+        <li> > git commit -m "Commit message"</li>
+        <li> > git push origin master</li>
+      </ul>
     </div>
     <div class="step slide" data-x="-1500" data-y="0">
       <div class="toolbar">
         <span>~/tkml/projects/</span>
       </div>
       <h2>Getting a Setup</h2>
-      <p>git checkout -b feature_x</p>
-      <p>git checkout master</p>
-      <p>git branch -d feature_x</p>
-      <p>git pull</p>
-      <p>git merge <branch></p>
-      <p>git tag -a v1.2 -m 'version 1.2' <sha or checksum></p>
-      <p>git push origin --tags</p>
-      <p>git checkout -- <filename></p>
-      <p>git status</p>
-      <p>git diff</p>
-      <p>git add *</p>
-      <p>git add -A</p>
-      <p>GitX - http://gitx.laullon.com/</p>
-      <p>SourceTree - http://www.sourcetreeapp.com/</p>
+      <ul>
+        <li> > git checkout -b feature_x</li>
+        <li> > git checkout master</li>
+        <li> > git branch -d feature_x</li>
+        <li> > git pull</li>
+        <li> > git merge  &lt;branch&gt;</li>
+        <li> > git tag -a v1.2 -m 'version 1.2' &lt;sha or checksum&gt;</li>
+        <li> > git push origin --tags</li>
+        <li> > git checkout -- &lt;filename&gt;</li>
+        <li> > git status</li>
+        <li> > git diff</li>
+        <li>GitX - http://gitx.laullon.com/</li>
+        <li>SourceTree - http://www.sourcetreeapp.com/</li>
+      </ul>
     </div>
     <div id="overview" class="step" data-x="-1500" data-y="150" data-scale="1.5">
     </div>
