--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="step" data-x="-2500" data-y="-2000" data-scale="3">
       <h1>Git Part I</h1>
     </div>
-    <div class="step slide" data-x="-1550" data-y="1600" data-z="-800">
+    <div class="step slide" data-x="-1570" data-y="2400" data-z="-1200">
       <div class="toolbar">
         <span>~/tkml/projects/</span>
       </div>
@@ -22,7 +22,7 @@
         <li> > git clone git@github.com:Tukaiz/backstage_build_3.git</li>
       </ul>
     </div>
-    <div class="step slide" data-x="-1530" data-y="800" data-z="-400">
+    <div class="step slide" data-x="-1550" data-y="1600" data-z="-800">
       <div class="toolbar">
         <span>~/tkml/projects/</span>
       </div>
@@ -30,32 +30,101 @@
       <ul>
         <li> > git add &lt;filename or path&gt;</li>
         <li> > git status</li>
+        <li> > git checkout -- &lt;filename&gt;</li>
         <li> > git diff</li>
+        <li> > git reset --hard HEAD^</li>
         <li> > git add *</li>
         <li> > git add -A</li>
         <li> > git commit -m "Commit message"</li>
+      </ul>
+    </div>
+    <div class="step slide" data-x="-1530" data-y="800" data-z="-400">
+      <div class="toolbar">
+        <span>~/tkml/projects/</span>
+      </div>
+      <h2>Branches not Streams or Workspaces</h2>
+      <ul>
+        <li> > git checkout uat</li>
+        <li> > git checkout -b feature_x</li>
+        <li> > git push origin feature_x</li>
+        <li> > git branch -d feature_x</li>
+        <li> > git pull &lt;branch&gt;</li>
+        <li> > git merge  &lt;branch&gt;</li>
       </ul>
     </div>
     <div class="step slide" data-x="-1500" data-y="0">
       <div class="toolbar">
         <span>~/tkml/projects/</span>
       </div>
+        <h2>Some Extras</h2>
+        <ul>
+          <li> > git tag -a v1.2 -m 'version 1.2' &lt;sha or checksum&gt;</li>
+          <li> > git push origin --tags</li>
+          <li>GitX - http://gitx.laullon.com/</li>
+          <li>SourceTree - http://www.sourcetreeapp.com/</li>
+        </ul>
+    </div>
+    <div id="overview_1" class="step" data-x="-1500" data-y="150" data-scale="1.5">
+    </div>
+
+
+    <div class="step" data-x="2500" data-y="2000" data-scale="3">
+      <h1>Git Part II</h1>
+    </div>
+    <div class="step slide" data-x="3430" data-y="3600" data-z="-1200">
+      <div class="toolbar">
+        <span>~/tkml/projects/</span>
+      </div>
       <h2>Getting a Setup</h2>
       <ul>
-        <li> > git push origin master</li>
-        <li> > git checkout -b feature_x</li>
-        <li> > git checkout master</li>
-        <li> > git branch -d feature_x</li>
-        <li> > git pull</li>
-        <li> > git merge  &lt;branch&gt;</li>
-        <li> > git tag -a v1.2 -m 'version 1.2' &lt;sha or checksum&gt;</li>
-        <li> > git push origin --tags</li>
-        <li> > git checkout -- &lt;filename&gt;</li>
-        <li>GitX - http://gitx.laullon.com/</li>
-        <li>SourceTree - http://www.sourcetreeapp.com/</li>
+        <li> > git init</li>
+        <li> > git clone git@github.com:Tukaiz/backstage_build_3.git</li>
       </ul>
     </div>
-    <div id="overview" class="step" data-x="-1500" data-y="150" data-scale="1.5">
+    <div class="step slide" data-x="3450" data-y="2800" data-z="-800">
+      <div class="toolbar">
+        <span>~/tkml/projects/</span>
+      </div>
+      <h2>Working with Files</h2>
+      <ul>
+        <li> > git add &lt;filename or path&gt;</li>
+        <li> > git status</li>
+        <li> > git checkout -- &lt;filename&gt;</li>
+        <li> > git diff</li>
+        <li> > git reset --hard HEAD^</li>
+        <li> > git add *</li>
+        <li> > git add -A</li>
+        <li> > git commit -m "Commit message"</li>
+      </ul>
+    </div>
+    <div class="step slide" data-x="3470" data-y="2000" data-z="-400">
+      <div class="toolbar">
+        <span>~/tkml/projects/</span>
+      </div>
+      <h2>Branches not Streams or Workspaces</h2>
+      <ul>
+        <li> > git checkout uat</li>
+        <li> > git checkout -b feature_x</li>
+        <li> > git push origin feature_x</li>
+        <li> > git branch -d feature_x</li>
+        <li> > git pull &lt;branch&gt;</li>
+        <li> > git merge  &lt;branch&gt;</li>
+      </ul>
+    </div>
+    <div class="step slide" data-x="3490" data-y="1200">
+      <div class="toolbar">
+        <span>~/tkml/projects/</span>
+      </div>
+        <h2>Some Extras</h2>
+        <ul>
+          <li> > git tag -a v1.2 -m 'version 1.2' &lt;sha or checksum&gt;</li>
+          <li> > git push origin --tags</li>
+          <li>GitX - http://gitx.laullon.com/</li>
+          <li>SourceTree - http://www.sourcetreeapp.com/</li>
+        </ul>
+    </div>
+
+    <div id="overview_2" class="step" data-x="3500" data-y="1400" data-scale="1.5">
     </div>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
